--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@remix-run/react": "^1.12.0",
     "@remix-run/serve": "^1.12.0",
     "@tabler/icons-react": "^2.2.0",
+    "appwrite": "^10.2.0",
+    "node-appwrite": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
@@ -30,6 +32,7 @@
     "@types/react-dom": "^18.0.10",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "typescript": "^4.9.5"
   },
