--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@remix-run/serve": "^1.12.0",
     "@tabler/icons-react": "^2.2.0",
     "appwrite": "^10.2.0",
+    "bcrypt": "^5.1.0",
+    "bluebird": "^3.7.2",
+    "constate": "^3.3.2",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
+    "jsonwebtoken": "^9.0.0",
     "node-appwrite": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +34,9 @@
   "devDependencies": {
     "@remix-run/dev": "0.0.0-nightly-a024557-20230207",
     "@remix-run/eslint-config": "^1.12.0",
+    "@types/bcrypt": "5.0.0",
+    "@types/bluebird": "^3.5.38",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "eslint": "^8.33.0",
