--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@mantine/core": "5.10.3",
     "@mantine/hooks": "5.10.3",
     "@mantine/remix": "5.10.3",
-    "@remix-run/node": "^1.12.0",
-    "@remix-run/react": "^1.12.0",
-    "@remix-run/serve": "^1.12.0",
+    "@remix-run/node": "1.12.0",
+    "@remix-run/react": "1.12.0",
+    "@remix-run/serve": "1.12.0",
     "@tabler/icons-react": "^2.2.0",
     "appwrite": "^10.2.0",
     "bcrypt": "^5.1.0",
@@ -32,8 +32,8 @@
     "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-nightly-a024557-20230207",
-    "@remix-run/eslint-config": "^1.12.0",
+    "@remix-run/dev": "1.12.0",
+    "@remix-run/eslint-config": "1.12.0",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "^3.5.38",
     "@types/jsonwebtoken": "^9.0.1",
