--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@mantine/core": "5.10.3",
     "@mantine/hooks": "5.10.3",
     "@mantine/remix": "5.10.3",
-    "@remix-run/node": "1.12.0",
-    "@remix-run/react": "1.12.0",
-    "@remix-run/serve": "1.12.0",
-    "@tabler/icons-react": "^2.2.0",
+    "@mantine/ssr": "^5.10.3",
+    "@remix-run/node": "0.0.0-nightly-a024557-20230207",
+    "@remix-run/react": "0.0.0-nightly-a024557-20230207",
+    "@remix-run/serve": "0.0.0-nightly-a024557-20230207",
+    "@tabler/icons-react": "^2.3.0",
     "appwrite": "^10.2.0",
     "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
     "constate": "^3.3.2",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
+    "isbot": "^3.6.5",
     "jsonwebtoken": "^9.0.0",
     "node-appwrite": "^8.2.0",
     "react": "^18.2.0",
@@ -32,14 +34,14 @@
     "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.12.0",
-    "@remix-run/eslint-config": "1.12.0",
+    "@remix-run/dev": "0.0.0-nightly-a024557-20230207",
+    "@remix-run/eslint-config": "0.0.0-nightly-a024557-20230207",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "^3.5.38",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
