--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/node": "0.0.0-nightly-a024557-20230207",
     "@remix-run/react": "0.0.0-nightly-a024557-20230207",
     "@remix-run/serve": "0.0.0-nightly-a024557-20230207",
+    "@remix-run/vercel": "^1.12.0",
     "@tabler/icons-react": "^2.3.0",
     "appwrite": "^10.2.0",
     "bcrypt": "^5.1.0",
@@ -45,6 +46,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
+    "prisma": "^4.10.1",
     "typescript": "^4.9.5"
   },
   "engines": {
