--- a/package.json
+++ b/package.json
@@ -22,19 +22,25 @@
     "@remix-run/vercel": "^1.12.0",
     "@tabler/icons-react": "^2.3.0",
     "appwrite": "^10.2.0",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
     "constate": "^3.3.2",
+    "debug": "^4.3.4",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
+    "got": "^12.5.3",
+    "got-cjs": "^12.5.4",
     "isbot": "^3.6.5",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "node-appwrite": "^8.2.0",
     "puppeteer": "^19.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "remix-island": "^0.1.2",
+    "tough-cookie": "^4.1.2",
     "yup": "^1.0.0"
   },
   "devDependencies": {
@@ -43,8 +49,10 @@
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "^3.5.38",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/tough-cookie": "^4.0.2",
     "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
