--- a/package.json
+++ b/package.json
@@ -9,59 +9,59 @@
     "sync-sapo-db": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/sapo/sync-sapo-db.ts"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.10.0",
-    "@mantine/core": "5.10.3",
-    "@mantine/hooks": "5.10.3",
-    "@mantine/remix": "5.10.3",
-    "@mantine/ssr": "^5.10.3",
+    "@emotion/react": "11.10.6",
+    "@emotion/server": "11.10.0",
+    "@mantine/core": "5.10.4",
+    "@mantine/hooks": "5.10.4",
+    "@mantine/remix": "5.10.4",
+    "@mantine/ssr": "5.10.4",
     "@prisma/client": "4.10.1",
-    "@remix-run/node": "0.0.0-nightly-a024557-20230207",
-    "@remix-run/react": "0.0.0-nightly-a024557-20230207",
-    "@remix-run/serve": "0.0.0-nightly-a024557-20230207",
-    "@remix-run/vercel": "^1.12.0",
-    "@tabler/icons-react": "^2.3.0",
-    "appwrite": "^10.2.0",
-    "axios": "^1.3.4",
-    "bcrypt": "^5.1.0",
-    "bluebird": "^3.7.2",
-    "constate": "^3.3.2",
-    "debug": "^4.3.4",
-    "firebase": "^9.17.1",
-    "firebase-admin": "^11.5.0",
-    "got": "^12.5.3",
-    "got-cjs": "^12.5.4",
-    "isbot": "^3.6.5",
-    "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21",
-    "node-appwrite": "^8.2.0",
-    "puppeteer": "^19.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
-    "remix-island": "^0.1.2",
-    "tough-cookie": "^4.1.2",
-    "yup": "^1.0.0"
+    "@remix-run/node": "1.13.0",
+    "@remix-run/react": "1.13.0",
+    "@remix-run/serve": "1.13.0",
+    "@remix-run/vercel": "1.13.0",
+    "@tabler/icons-react": "2.5.0",
+    "appwrite": "10.2.0",
+    "axios": "1.3.4",
+    "bcrypt": "5.1.0",
+    "bluebird": "3.7.2",
+    "constate": "3.3.2",
+    "debug": "4.3.4",
+    "firebase": "9.17.1",
+    "firebase-admin": "11.5.0",
+    "got": "12.5.3",
+    "got-cjs": "12.5.4",
+    "isbot": "3.6.6",
+    "jsonwebtoken": "9.0.0",
+    "lodash": "4.17.21",
+    "node-appwrite": "8.2.0",
+    "puppeteer": "19.7.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.43.2",
+    "remix-island": "0.1.2",
+    "tough-cookie": "4.1.2",
+    "yup": "1.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "0.0.0-nightly-a024557-20230207",
-    "@remix-run/eslint-config": "0.0.0-nightly-a024557-20230207",
+    "@remix-run/dev": "1.13.0",
+    "@remix-run/eslint-config": "1.13.0",
     "@types/bcrypt": "5.0.0",
-    "@types/bluebird": "^3.5.38",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/lodash": "^4.14.191",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
-    "@types/tough-cookie": "^4.0.2",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
-    "prisma": "^4.10.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.5"
+    "@types/bluebird": "3.5.38",
+    "@types/jsonwebtoken": "9.0.1",
+    "@types/lodash": "4.14.191",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/tough-cookie": "4.0.2",
+    "dotenv": "16.0.3",
+    "eslint": "8.34.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-react": "7.32.2",
+    "prisma": "4.10.1",
+    "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "4.1.2",
+    "typescript": "4.9.5"
   },
   "engines": {
     "node": ">=14"
