--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "5.1.0",
     "bluebird": "3.7.2",
     "constate": "3.3.2",
+    "date-fns": "2.29.3",
     "debug": "4.3.4",
     "firebase": "9.17.1",
     "firebase-admin": "11.5.0",
@@ -36,11 +37,13 @@
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "node-appwrite": "8.2.0",
+    "numeral": "2.0.6",
     "puppeteer": "19.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.2",
     "remix-island": "0.1.2",
+    "superjson": "1.12.2",
     "tough-cookie": "4.1.2",
     "yup": "1.0.0"
   },
@@ -51,6 +54,7 @@
     "@types/bluebird": "3.5.38",
     "@types/jsonwebtoken": "9.0.1",
     "@types/lodash": "4.14.191",
+    "@types/numeral": "^2.0.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/tough-cookie": "4.0.2",
