--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-appwrite": "8.2.0",
     "numeral": "2.0.6",
     "puppeteer": "19.7.2",
+    "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.2",
