--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/server": "11.10.0",
     "@mantine/core": "5.10.5",
     "@mantine/hooks": "5.10.5",
+    "@mantine/nprogress": "5.10.5",
     "@mantine/remix": "5.10.5",
     "@mantine/ssr": "5.10.5",
     "@prisma/client": "4.11.0",
