--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "remix dev",
     "start": "remix-serve build",
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register tasks/sapo/sync-sapo-db.ts",
-    "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/common/seed.ts"
+    "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/common/seed.ts",
+    "prod": "sh ./scripts/deploy.sh"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
