--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
     "prisma": "4.11.0",
+    "remix-flat-routes": "^0.5.7",
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.1.2",
     "typescript": "4.9.5"
