--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "npm-run-all --parallel \"dev:*\"",
+    "dev:node": "cross-env NODE_ENV=development nodemon --require dotenv/config ./server.js --watch ./server.js",
+    "dev:remix": "remix dev",
     "start": "remix-serve build",
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register tasks/sapo/sync-sapo-db.ts",
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/common/seed.ts",
@@ -61,11 +63,14 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/tough-cookie": "4.0.2",
+    "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
+    "nodemon": "2.0.21",
+    "npm-run-all": "4.1.5",
     "prisma": "4.11.0",
     "remix-flat-routes": "^0.5.7",
     "ts-node-dev": "2.0.0",
