--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npm-run-all --parallel \"dev:*\"",
     "dev:node": "cross-env NODE_ENV=development nodemon --require dotenv/config ./server.js --watch ./server.js",
     "dev:remix": "remix dev",
-    "start": "remix-serve build",
+    "start": "cross-env NODE_ENV=production node ./server.js",
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register tasks/sapo/sync-sapo-db.ts",
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/common/seed.ts",
     "prod": "sh ./scripts/deploy.sh"
