--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev:node": "cross-env NODE_ENV=development nodemon --require dotenv/config ./server.js --watch ./server.js",
     "dev:remix": "remix dev",
     "start": "cross-env NODE_ENV=production node ./server.js",
-    "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo-db.ts",
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/common/seed.ts",
-    "prod": "sh ./scripts/deploy.sh"
+    "prod": "sh ./scripts/deploy.sh",
+    "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo-db.ts",
+    "sync-sapo-loyalty": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo-loyalty.ts"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
