--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
+    "@mantine/carousel": "6.0.0",
     "@mantine/core": "6.0.0",
     "@mantine/hooks": "6.0.0",
     "@mantine/nprogress": "6.0.0",
@@ -34,6 +35,7 @@
     "constate": "3.3.2",
     "date-fns": "2.29.3",
     "debug": "4.3.4",
+    "embla-carousel-react": "7.0.9",
     "firebase": "9.17.2",
     "firebase-admin": "11.5.0",
     "got": "12.6.0",
@@ -41,6 +43,7 @@
     "isbot": "3.6.6",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
+    "next-barcode": "1.4.0",
     "node-appwrite": "8.2.0",
     "numeral": "2.0.6",
     "puppeteer": "19.7.2",
