--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register tasks/common/seed.ts",
     "prod": "sh ./scripts/deploy.sh",
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo.ts",
-    "sync-sapo-loyalty": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo-loyalty.ts"
+    "sync-sapo-loyalty": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo-loyalty.ts",
+    "adjust-loyalty-point": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/adjust-loyalty-point.ts"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
-    "@mantine/carousel": "6.0.0",
-    "@mantine/core": "6.0.0",
-    "@mantine/hooks": "6.0.0",
-    "@mantine/nprogress": "6.0.0",
-    "@mantine/remix": "6.0.0",
-    "@mantine/ssr": "6.0.0",
+    "@mantine/carousel": "6.0.1",
+    "@mantine/core": "6.0.1",
+    "@mantine/hooks": "6.0.1",
+    "@mantine/nprogress": "6.0.1",
+    "@mantine/remix": "6.0.1",
+    "@mantine/ssr": "6.0.1",
     "@prisma/client": "4.11.0",
     "@remix-run/node": "1.14.0",
     "@remix-run/react": "1.14.0",
     "@remix-run/serve": "1.14.0",
     "@remix-run/vercel": "1.14.0",
-    "@tabler/icons-react": "2.7.0",
+    "@tabler/icons-react": "2.8.0",
     "appwrite": "10.2.0",
     "axios": "1.3.4",
     "bcrypt": "5.1.0",
@@ -46,7 +47,7 @@
     "next-barcode": "1.4.0",
     "node-appwrite": "8.2.0",
     "numeral": "2.0.6",
-    "puppeteer": "19.7.2",
+    "puppeteer": "19.7.3",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -70,7 +71,7 @@
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "eslint": "8.35.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
     "nodemon": "2.0.21",
