--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
-    "@mantine/carousel": "6.0.1",
-    "@mantine/core": "6.0.1",
-    "@mantine/hooks": "6.0.1",
-    "@mantine/nprogress": "6.0.1",
-    "@mantine/remix": "6.0.1",
-    "@mantine/ssr": "6.0.1",
+    "@mantine/carousel": "6.0.2",
+    "@mantine/core": "6.0.2",
+    "@mantine/hooks": "6.0.2",
+    "@mantine/nprogress": "6.0.2",
+    "@mantine/remix": "6.0.2",
+    "@mantine/ssr": "6.0.2",
     "@prisma/client": "4.11.0",
-    "@remix-run/node": "1.14.0",
-    "@remix-run/react": "1.14.0",
-    "@remix-run/serve": "1.14.0",
-    "@remix-run/vercel": "1.14.0",
-    "@tabler/icons-react": "2.8.0",
+    "@remix-run/node": "1.14.3",
+    "@remix-run/react": "1.14.3",
+    "@remix-run/serve": "1.14.3",
+    "@remix-run/vercel": "1.14.3",
+    "@tabler/icons-react": "2.11.0",
     "appwrite": "10.2.0",
     "axios": "1.3.4",
     "bcrypt": "5.1.0",
@@ -36,18 +36,18 @@
     "constate": "3.3.2",
     "date-fns": "2.29.3",
     "debug": "4.3.4",
-    "embla-carousel-react": "7.0.9",
-    "firebase": "9.17.2",
+    "embla-carousel-react": "7.1.0",
+    "firebase": "9.18.0",
     "firebase-admin": "11.5.0",
     "got": "12.6.0",
     "got-cjs": "12.5.4",
-    "isbot": "3.6.6",
+    "isbot": "3.6.7",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
     "node-appwrite": "8.2.0",
     "numeral": "2.0.6",
-    "puppeteer": "19.7.3",
+    "puppeteer": "19.7.5",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -58,8 +58,8 @@
     "yup": "1.0.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.14.0",
-    "@remix-run/eslint-config": "1.14.0",
+    "@remix-run/dev": "1.14.3",
+    "@remix-run/eslint-config": "1.14.3",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "3.5.38",
     "@types/jsonwebtoken": "9.0.1",
@@ -70,17 +70,17 @@
     "@types/tough-cookie": "4.0.2",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
-    "eslint": "8.35.0",
+    "eslint": "8.36.0",
     "eslint-config-prettier": "8.7.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
     "nodemon": "2.0.21",
     "npm-run-all": "4.1.5",
     "prisma": "4.11.0",
-    "remix-flat-routes": "^0.5.7",
+    "remix-flat-routes": "0.5.8",
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.1.2",
-    "typescript": "4.9.5"
+    "typescript": "5.0.2"
   },
   "engines": {
     "node": "16"
