--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
+    "@hookform/resolvers": "3.0.0",
     "@mantine/carousel": "6.0.2",
     "@mantine/core": "6.0.2",
     "@mantine/hooks": "6.0.2",
@@ -51,11 +52,13 @@
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.43.7",
     "remix-island": "0.1.2",
     "superjson": "1.12.2",
     "tough-cookie": "4.1.2",
     "ts-node": "^10.9.1",
-    "yup": "1.0.2"
+    "yup": "1.0.2",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "1.14.3",
