Add admin account management

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/carousel": "6.0.2",
     "@mantine/core": "6.0.2",
     "@mantine/hooks": "6.0.2",
+    "@mantine/notifications": "6.0.4",
     "@mantine/nprogress": "6.0.2",
     "@mantine/remix": "6.0.2",
     "@mantine/ssr": "6.0.2",
@@ -40,6 +41,7 @@
     "embla-carousel-react": "7.1.0",
     "firebase": "9.18.0",
     "firebase-admin": "11.5.0",
+    "fuzzysort": "2.0.4",
     "got": "12.6.0",
     "got-cjs": "12.5.4",
     "isbot": "3.6.7",
