--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo.ts",
     "sync-sapo-loyalty": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/sync-sapo-loyalty.ts",
     "adjust-loyalty-point": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/adjust-loyalty-point.ts",
-    "dev:sapo": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/dev.ts"
+    "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly tasks/sapo/dev.ts"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "3.0.0",
     "@mantine/carousel": "6.0.4",
     "@mantine/core": "6.0.4",
+    "@mantine/dates": "6.0.4",
     "@mantine/hooks": "6.0.4",
     "@mantine/notifications": "6.0.4",
     "@mantine/nprogress": "6.0.4",
