--- a/package.json
+++ b/package.json
@@ -18,45 +18,45 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
-    "@hookform/resolvers": "3.0.0",
-    "@mantine/carousel": "6.0.4",
-    "@mantine/core": "6.0.4",
-    "@mantine/dates": "6.0.4",
-    "@mantine/hooks": "6.0.4",
-    "@mantine/notifications": "6.0.4",
-    "@mantine/nprogress": "6.0.4",
-    "@mantine/remix": "6.0.4",
-    "@mantine/ssr": "6.0.4",
-    "@prisma/client": "4.11.0",
-    "@remix-run/node": "1.14.3",
-    "@remix-run/react": "1.14.3",
-    "@remix-run/serve": "1.14.3",
-    "@remix-run/vercel": "1.14.3",
-    "@tabler/icons-react": "2.11.0",
+    "@hookform/resolvers": "3.0.1",
+    "@mantine/carousel": "6.0.6",
+    "@mantine/core": "6.0.6",
+    "@mantine/dates": "6.0.6",
+    "@mantine/hooks": "6.0.6",
+    "@mantine/notifications": "6.0.6",
+    "@mantine/nprogress": "6.0.6",
+    "@mantine/remix": "6.0.6",
+    "@mantine/ssr": "6.0.6",
+    "@prisma/client": "4.12.0",
+    "@remix-run/node": "1.15.0",
+    "@remix-run/react": "1.15.0",
+    "@remix-run/serve": "1.15.0",
+    "@remix-run/vercel": "1.15.0",
+    "@tabler/icons-react": "2.14.0",
     "appwrite": "10.2.0",
-    "axios": "1.3.4",
+    "axios": "1.3.5",
     "bcrypt": "5.1.0",
     "bluebird": "3.7.2",
     "constate": "3.3.2",
     "date-fns": "2.29.3",
     "debug": "4.3.4",
     "embla-carousel-react": "7.1.0",
-    "firebase": "9.18.0",
-    "firebase-admin": "11.5.0",
+    "firebase": "9.19.1",
+    "firebase-admin": "11.6.0",
     "fuzzysort": "2.0.4",
     "got": "12.6.0",
     "got-cjs": "12.5.4",
-    "isbot": "3.6.7",
+    "isbot": "3.6.8",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
     "node-appwrite": "8.2.0",
     "numeral": "2.0.6",
-    "puppeteer": "19.8.0",
+    "puppeteer": "19.8.5",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.43.8",
+    "react-hook-form": "7.43.9",
     "remix-island": "0.1.2",
     "superjson": "1.12.2",
     "tough-cookie": "4.1.2",
@@ -65,31 +65,31 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.14.3",
-    "@remix-run/eslint-config": "1.14.3",
+    "@remix-run/dev": "1.15.0",
+    "@remix-run/eslint-config": "1.15.0",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "3.5.38",
     "@types/jsonwebtoken": "9.0.1",
-    "@types/lodash": "4.14.191",
+    "@types/lodash": "4.14.192",
     "@types/numeral": "^2.0.2",
-    "@types/react": "18.0.28",
+    "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@types/tough-cookie": "4.0.2",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
-    "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
+    "eslint": "8.38.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
-    "nodemon": "2.0.21",
+    "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
-    "prisma": "4.11.0",
+    "prisma": "4.12.0",
     "remix-flat-routes": "0.5.8",
     "ts-node-dev": "2.0.0",
-    "tsconfig-paths": "4.1.2",
-    "typescript": "5.0.2"
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.0.4"
   },
   "engines": {
-    "node": "16"
+    "node": "16.x.x || 18.x.x"
   }
 }
