--- a/package.json
+++ b/package.json
@@ -18,50 +18,47 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
-    "@hookform/resolvers": "3.0.1",
-    "@mantine/carousel": "6.0.7",
-    "@mantine/core": "6.0.7",
-    "@mantine/dates": "6.0.7",
-    "@mantine/hooks": "6.0.7",
-    "@mantine/notifications": "6.0.7",
-    "@mantine/nprogress": "6.0.7",
-    "@mantine/remix": "6.0.7",
-    "@mantine/ssr": "6.0.7",
-    "@prisma/client": "4.12.0",
+    "@hookform/resolvers": "3.1.0",
+    "@mantine/carousel": "6.0.8",
+    "@mantine/core": "6.0.8",
+    "@mantine/dates": "6.0.8",
+    "@mantine/hooks": "6.0.8",
+    "@mantine/notifications": "6.0.8",
+    "@mantine/nprogress": "6.0.8",
+    "@mantine/remix": "6.0.8",
+    "@mantine/ssr": "6.0.8",
+    "@prisma/client": "4.13.0",
     "@remix-run/node": "1.15.0",
     "@remix-run/react": "1.15.0",
     "@remix-run/serve": "1.15.0",
     "@remix-run/vercel": "1.15.0",
-    "@tabler/icons-react": "2.15.0",
+    "@tabler/icons-react": "2.17.0",
     "appwrite": "11.0.0",
-    "axios": "1.3.5",
     "bcrypt": "5.1.0",
     "bluebird": "3.7.2",
     "constate": "3.3.2",
     "date-fns": "2.29.3",
     "debug": "4.3.4",
-    "embla-carousel-react": "7.1.0",
-    "firebase": "9.19.1",
-    "firebase-admin": "11.6.0",
+    "firebase": "9.20.0",
+    "firebase-admin": "11.7.0",
     "fuzzysort": "2.0.4",
     "got": "12.6.0",
     "got-cjs": "12.5.4",
-    "isbot": "3.6.8",
+    "isbot": "3.6.10",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
     "node-appwrite": "8.2.0",
     "numeral": "2.0.6",
-    "puppeteer": "19.8.5",
+    "puppeteer": "19.10.1",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
     "remix-island": "0.1.2",
-    "superjson": "1.12.2",
+    "superjson": "1.12.3",
     "tough-cookie": "4.1.2",
-    "ts-node": "^10.9.1",
-    "yup": "1.1.0",
+    "ts-node": "10.9.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
@@ -70,20 +67,20 @@
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "3.5.38",
     "@types/jsonwebtoken": "9.0.1",
-    "@types/lodash": "4.14.192",
-    "@types/numeral": "^2.0.2",
-    "@types/react": "18.0.35",
+    "@types/lodash": "4.14.194",
+    "@types/numeral": "2.0.2",
+    "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "@types/tough-cookie": "4.0.2",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
-    "eslint": "8.38.0",
+    "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
     "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
-    "prisma": "4.12.0",
+    "prisma": "4.13.0",
     "remix-flat-routes": "0.5.8",
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.2.0",
