--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register ./tasks/common/seed.ts",
     "prod": "sh ./scripts/deploy.sh",
-    "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/sync-sapo.ts",
-    "sync-sapo-loyalty": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/sync-sapo-loyalty.ts",
-    "adjust-loyalty-point": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/adjust-loyalty-point.ts",
-    "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/dev.ts"
+    "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/sync-sapo.ts",
+    "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/dev.ts"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
