Update ts-node config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register ./tasks/common/seed.ts",
     "prod": "sh ./scripts/deploy.sh",
-    "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/sync-sapo.ts",
+    "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register ./tasks/sapo/scripts/sync-sapo.ts",
     "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/dev.ts"
   },
   "dependencies": {
