--- a/package.json
+++ b/package.json
@@ -14,74 +14,77 @@
     "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/dev.ts"
   },
   "dependencies": {
-    "@emotion/react": "11.10.6",
-    "@emotion/server": "11.10.0",
+    "@emotion/react": "11.11.1",
+    "@emotion/server": "11.11.0",
     "@hookform/resolvers": "3.1.0",
-    "@mantine/carousel": "6.0.8",
-    "@mantine/core": "6.0.8",
-    "@mantine/dates": "6.0.8",
-    "@mantine/hooks": "6.0.8",
-    "@mantine/notifications": "6.0.8",
-    "@mantine/nprogress": "6.0.8",
-    "@mantine/remix": "6.0.8",
-    "@mantine/ssr": "6.0.8",
-    "@prisma/client": "4.13.0",
-    "@remix-run/node": "1.15.0",
-    "@remix-run/react": "1.15.0",
-    "@remix-run/serve": "1.15.0",
-    "@remix-run/vercel": "1.15.0",
-    "@tabler/icons-react": "2.17.0",
+    "@mantine/carousel": "6.0.13",
+    "@mantine/core": "6.0.13",
+    "@mantine/dates": "6.0.13",
+    "@mantine/hooks": "6.0.13",
+    "@mantine/notifications": "6.0.13",
+    "@mantine/nprogress": "6.0.13",
+    "@mantine/remix": "6.0.13",
+    "@mantine/ssr": "6.0.13",
+    "@prisma/client": "4.15.0",
+    "@remix-run/node": "1.17.0",
+    "@remix-run/react": "1.17.0",
+    "@remix-run/serve": "1.17.0",
+    "@remix-run/vercel": "1.17.0",
+    "@tabler/icons-react": "2.22.0",
     "bcrypt": "5.1.0",
     "bluebird": "3.7.2",
     "constate": "3.3.2",
-    "date-fns": "2.29.3",
-    "dayjs": "1.11.7",
+    "date-fns": "2.30.0",
+    "dayjs": "1.11.8",
     "debug": "4.3.4",
-    "firebase": "9.20.0",
-    "firebase-admin": "11.7.0",
+    "firebase": "9.22.2",
+    "firebase-admin": "11.9.0",
     "fuzzysort": "2.0.4",
-    "got": "12.6.0",
+    "got": "13.0.0",
     "got-cjs": "12.5.4",
     "isbot": "3.6.10",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
     "numeral": "2.0.6",
-    "puppeteer": "19.10.1",
+    "puppeteer": "20.5.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.43.9",
+    "react-hook-form": "7.44.3",
     "remix-island": "0.1.2",
     "superjson": "1.12.3",
-    "tough-cookie": "4.1.2",
+    "tough-cookie": "4.1.3",
     "ts-node": "10.9.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.15.0",
-    "@remix-run/eslint-config": "1.15.0",
+    "@remix-run/dev": "1.17.0",
+    "@remix-run/eslint-config": "1.17.0",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "3.5.38",
     "@types/jsonwebtoken": "9.0.2",
-    "@types/lodash": "4.14.194",
+    "@types/lodash": "4.14.195",
     "@types/numeral": "2.0.2",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "18.2.10",
+    "@types/react-dom": "18.2.4",
     "@types/tough-cookie": "4.0.2",
+    "aws-sdk": "2.1395.0",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
-    "eslint": "8.39.0",
+    "dotenv": "16.1.4",
+    "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
+    "mock-aws-s3": "4.0.2",
+    "nock": "13.3.1",
     "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
-    "prisma": "4.13.0",
+    "prisma": "4.15.0",
     "remix-flat-routes": "0.5.8",
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.1.3"
   },
   "engines": {
     "node": "16.x.x || 18.x.x"
