--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "firebase": "9.22.2",
     "firebase-admin": "11.9.0",
     "fuzzysort": "2.0.4",
-    "got": "12.6.1",
+    "got": "13.0.0",
     "got-cjs": "12.5.4",
     "isbot": "3.6.10",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
     "numeral": "2.0.6",
-    "puppeteer": "19.11.1",
+    "puppeteer": "20.5.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -66,15 +66,18 @@
     "@types/jsonwebtoken": "9.0.2",
     "@types/lodash": "4.14.195",
     "@types/numeral": "2.0.2",
-    "@types/react": "18.2.11",
+    "@types/react": "18.2.10",
     "@types/react-dom": "18.2.4",
     "@types/tough-cookie": "4.0.2",
+    "aws-sdk": "2.1395.0",
     "cross-env": "7.0.3",
     "dotenv": "16.1.4",
     "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
+    "mock-aws-s3": "4.0.2",
+    "nock": "13.3.1",
     "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
     "prisma": "4.15.0",
