--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -11,4 +11,4 @@ versions = ["minor", "patch"]
 usernames = ["renovate"]
 
 [approve]
-auto_approve_usernames = ["renovate"]
+auto_approve_usernames = ["renovate", "duongdev"]
