--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "got": "13.0.0",
     "got-cjs": "12.5.4",
     "isbot": "3.6.10",
+    "jsdom": "22.1.0",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
@@ -65,6 +66,7 @@
     "@remix-run/eslint-config": "1.17.0",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "3.5.38",
+    "@types/jsdom": "21.1.1",
     "@types/jsonwebtoken": "9.0.2",
     "@types/lodash": "4.14.195",
     "@types/numeral": "2.0.2",
