--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prod": "sh ./scripts/deploy.sh",
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register ./tasks/sapo/scripts/sync-sapo.ts",
     "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/dev.ts",
-    "openai:dev": "DEBUG=openai:*,sapo-web:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/openai/dev.ts"
+    "openai:dev": "DEBUG=openai:*,sapo-web:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/openai/dev.ts",
+    "openai:gen-prod-desc": "DEBUG=openai:*,sapo-web:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/openai/run.ts"
   },
   "dependencies": {
     "@emotion/react": "11.11.1",
@@ -50,6 +51,7 @@
     "next-barcode": "1.4.0",
     "numeral": "2.0.6",
     "openai": "3.2.1",
+    "parse-json": "7.0.0",
     "puppeteer": "20.5.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
