--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "seed": "DEBUG=Sapo:* tsnd -r dotenv/config -r tsconfig-paths/register ./tasks/common/seed.ts",
     "prod": "sh ./scripts/deploy.sh",
     "sync-sapo-db": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register ./tasks/sapo/scripts/sync-sapo.ts",
-    "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/dev.ts"
+    "sapo:dev": "DEBUG=Sapo:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/sapo/scripts/dev.ts",
+    "openai:dev": "DEBUG=openai:*,sapo-web:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/openai/dev.ts",
+    "openai:gen-prod-desc": "DEBUG=openai:*,sapo-web:* ts-node -r dotenv/config -r tsconfig-paths/register --transpileOnly ./tasks/openai/run.ts"
   },
   "dependencies": {
     "@emotion/react": "11.11.1",
@@ -43,10 +45,13 @@
     "got": "13.0.0",
     "got-cjs": "12.5.4",
     "isbot": "3.6.10",
+    "jsdom": "22.1.0",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "next-barcode": "1.4.0",
     "numeral": "2.0.6",
+    "openai": "3.2.1",
+    "parse-json": "7.0.0",
     "puppeteer": "20.7.1",
     "query-string": "8.1.0",
     "react": "18.2.0",
@@ -63,6 +68,7 @@
     "@remix-run/eslint-config": "1.17.0",
     "@types/bcrypt": "5.0.0",
     "@types/bluebird": "3.5.38",
+    "@types/jsdom": "21.1.1",
     "@types/jsonwebtoken": "9.0.2",
     "@types/lodash": "4.14.195",
     "@types/numeral": "2.0.2",
